--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "k911/swoole-bundle",
+    "name": "small/openswoole-bundle",
     "type": "library",
     "description": "Swoole Symfony Bundle",
     "keywords": [
@@ -20,7 +20,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "ext-json": "*",
-        "ext-swoole": "^4.5.10",
+        "ext-openswoole": "^4.*",
         "beberlei/assert": "^3.0",
         "symfony/config": "^4.3.1|^5.0",
         "symfony/console": "^4.3.1|^5.0",
