--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "ext-json": "*",
-        "ext-openswoole": "^4.*",
+        "ext-openswoole": "4.*",
         "beberlei/assert": "^3.0",
         "symfony/config": "^4.3.1|^5.0",
         "symfony/console": "^4.3.1|^5.0",
